# rust-llm-flutter

./: .gitignore  MODELS.md  README.md
.github/workflows/: release.yml
flutter_package/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
flutter_package/android/: build.gradle
flutter_package/example/: .metadata  pubspec.yaml
flutter_package/example/dart_test/: pubspec.yaml
flutter_package/example/dart_test/lib/: dart_test.dart
flutter_package/example/lib/: main.dart
flutter_package/ios/: llm_runner.podspec
flutter_package/lib/: generated_bindings.dart  llm_runner.dart
flutter_package/lib/src/: models_config.dart
flutter_package/src/: downloader.dart
flutter_plugin/: pubspec.yaml
rust/: Cargo.toml  build.rs  build_mobile.sh  cbindgen.toml
rust/include/: llm_runner.h
rust/src/: bridge_generated.h  downloader.rs  inference.rs  lib.rs  model.rs  tokenizer.rs
